tests/fixtures/fail/generic_nominal_unknown_field_type.sc
let Invalid(T: type) = struct { value: Missing }

let main(): i32 = { 42 }
